# 2DDG

./: .gitignore  2dDG  2d_dg  Boundary_Conditions.f90  CMakeLists.txt  Conversion_Functions.f95  Fluxes_2D.f95  Initial_Conditions.f95  Legendre_Functions.f90  Makefile  Parameters.f90  Quadrature.f95  README.md  Set_Precision.f90  Set_Precision.f95  Variables.f90  calc_time_step.f95  gauss_init.f95  init.f90  main.f90  output.f95  residual.f95  save_sol.f90  two_euler_flux_comp.f95  update.f90
